Complete Items 9-12: Logging, Health Checks, ADRs, OpenTelemetry 1.10+ upgrade
- Upgraded OpenTelemetry packages to 1.10.0 (resolves security vulnerabilities)
- Added correlation ID middleware for distributed tracing
- Added health check endpoints to all services (/health)
- Added Terraform health probes (startup, liveness, readiness) for Container Apps
- Created 4 Architecture Decision Records (ADRs)
- Updated DEVELOPER_GUIDE.md with logging standards and observability patterns
- Added setup-local.ps1 for automated local environment setup
- All 41 tests passing

--- a/src/services/EventRelay/EventRelay.csproj
+++ b/src/services/EventRelay/EventRelay.csproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared.Events\Shared.Events.csproj" />
+    <ProjectReference Include="..\Shared.Infrastructure\Shared.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
