--- a/src/services/ProjectionService/ProjectionService.csproj
+++ b/src/services/ProjectionService/ProjectionService.csproj
@@ -19,5 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared.Events\Shared.Events.csproj" />
+    <ProjectReference Include="..\Shared.Infrastructure\Shared.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
