--- a/src/services/ProspectService/ProspectService.csproj
+++ b/src/services/ProspectService/ProspectService.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared.Events\Shared.Events.csproj" />
+    <ProjectReference Include="..\Shared.Infrastructure\Shared.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
